--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
 
 <body>
     <audio id="s0" preload="auto">
-        <source src="/mp3/Parade_s0.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s0.wav" type="audio/wav">
+        <source src="mp3/Parade_s0.mp3" type="audio/mp3">
+        <source src="wav/Parade_s0.wav" type="audio/wav">
     </audio>
     <audio id="s1" preload="auto">
-        <source src="/mp3/Parade_s1.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s1.wav" type="audio/wav">
+        <source src="mp3/Parade_s1.mp3" type="audio/mp3">
+        <source src="wav/Parade_s1.wav" type="audio/wav">
     </audio>
     <audio id="s2" preload="auto">
-        <source src="/mp3/Parade_s2.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s2.wav" type="audio/wav">
+        <source src="mp3/Parade_s2.mp3" type="audio/mp3">
+        <source src="wav/Parade_s2.wav" type="audio/wav">
     </audio>
     <audio id="s3" preload="auto">
-        <source src="/mp3/Parade_s3.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s3.wav" type="audio/wav">
+        <source src="mp3/Parade_s3.mp3" type="audio/mp3">
+        <source src="wav/Parade_s3.wav" type="audio/wav">
     </audio>
     <audio id="s4" preload="auto">
-        <source src="/mp3/Parade_s4.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s4.wav" type="audio/wav">
+        <source src="mp3/Parade_s4.mp3" type="audio/mp3">
+        <source src="wav/Parade_s4.wav" type="audio/wav">
     </audio>
     <audio id="s5" preload="auto">
-        <source src="/mp3/Parade_s5.mp3" type="audio/mp3">
-        <source src="/wav/Parade_s5.wav" type="audio/wav">
+        <source src="mp3/Parade_s5.mp3" type="audio/mp3">
+        <source src="wav/Parade_s5.wav" type="audio/wav">
     </audio>
     <p class="button">
         <input type="button" onclick="s0();" value="    s0  " accesskey="1" />
