--- a/index.html
+++ b/index.html
@@ -46,15 +46,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s0p").play();
+                    document.getElementById("s0p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s0r").play();
+                    document.getElementById("s0r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s0w").play();
+                    document.getElementById("s0w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s0t").play();
+                    document.getElementById("s0t").currentTime = 0;
                     break;
             }
 
@@ -64,15 +68,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s1p").play();
+                    document.getElementById("s1p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s1r").play();
+                    document.getElementById("s1r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s1w").play();
+                    document.getElementById("s1w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s1t").play();
+                    document.getElementById("s1t").currentTime = 0;
                     break;
             }
         }
@@ -81,15 +89,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s2p").play();
+                    document.getElementById("s2p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s2r").play();
+                    document.getElementById("s2r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s2w").play();
+                    document.getElementById("s2w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s2t").play();
+                    document.getElementById("s2t").currentTime = 0;
                     break;
             }
         }
@@ -98,15 +110,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s3p").play();
+                    document.getElementById("s3p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s3r").play();
+                    document.getElementById("s3r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s3w").play();
+                    document.getElementById("s3w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s3t").play();
+                    document.getElementById("s3t").currentTime = 0;
                     break;
             }
         }
@@ -115,15 +131,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s4p").play();
+                    document.getElementById("s4p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s4r").play();
+                    document.getElementById("s4r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s4w").play();
+                    document.getElementById("s4w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s4t").play();
+                    document.getElementById("s4t").currentTime = 0;
                     break;
             }
         }
@@ -132,15 +152,19 @@
             switch (Sw) {
                 case 0:
                     document.getElementById("s5p").play();
+                    document.getElementById("s5p").currentTime = 0;
                     break;
                 case 1:
                     document.getElementById("s5r").play();
+                    document.getElementById("s5r").currentTime = 0;
                     break;
                 case 2:
                     document.getElementById("s5w").play();
+                    document.getElementById("s5w").currentTime = 0;
                     break;
                 case 3:
                     document.getElementById("s5t").play();
+                    document.getElementById("s5t").currentTime = 0;
                     break;
             }
         }
